# FastAPI-Streamlit-with-LLM

./: .dockerignore  .gitignore  Dockerfile  Movies.py  README.md  University.py  app.py  app_fastapi.py  pyproject.toml  render-run.yaml  requirements.txt
.github/workflows/: render.yaml
static/: style.css
templates/: index.html  movies.html  universities.html
